--- a/parts/motiondetect.tex
+++ b/parts/motiondetect.tex
@@ -19,7 +19,7 @@
 \usepackage{enumerate}
 \usepackage{cleveref}  %cites figures intelligently
 \usepackage{import} % document structuring
-\usepackage{float}  %These two ensure that table position follows text by specifcing {table}[H]
+\usepackage{float}  %These two ensure that table position follows text by specifying {table}[H]
 \restylefloat{table}
 
 %CODE LISTINGS
@@ -62,11 +62,12 @@
 %\titleformat{\subsection}[runin]{\mdseries\bf}{\thesubsection}{1em}{}
 %\titleformat{\subsubsection}[runin]{\mdseries\bf\underline\large}{\thesubsection}{1 em}{\vspace{-5 pt}}
 
+\usepackage{footbib}
 
 % (This matches ConTeXt defaults)
 
 %%% ToC (table of contents) APPEARANCE
-\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
+%\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
 \usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
 \renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
 \renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
@@ -88,31 +89,27 @@ Modern smartphones of today do often come equipped with camera's whose images ca
 \paragraph{To start a basic motion detector, the very least that I would need to do is take one frame and subtract it from another to see the difference. To do this I would need to store every pixel value in an array for each image and then perform a sweep over both arrays to compare their pixel values. There must be imaging libraries that I could use that would greatly facilitate such imaging techniques. But first I would need to be able to take a single photo.....}
 
 \subsection{QtMobility vs Gstreamer vs FCam}
-\paragraph{\bf{QtMobility}}
-\paragraph{QtMobility is a Qt library that enabed developers to have access to standard mobile functionality such as messaging, contacts, multimedia, and camera.  The camera is contained within a QCamera widget and simple calls can be made to the imaging device.
+
+{\bf QtMobility} is a Qt library that enabed developers to have access to standard mobile functionality such as messaging, contacts, multimedia, and camera.  The camera is contained within a QCamera widget and simple calls can be made to the imaging device.
 \\Unfortunately the official stable version v1.1 had camera support for Symbian and Meego(Harmattan), but not Fremantle. There was an unstable version 1.2 which included Fremantle support, but once I had installed libqtm-dev\_1.2 on the rootstrap device, and tried to use the QCamera element from within a C++ class it did not work. This is because the QCamera element has to be accessed through QML, which would be doable but would not be optimized for speed. For this reason I dropped QtMobility.
-}
-\pagebreak %encourage
-\paragraph{\bf{GStreamer}}
-\paragraph{GStreamer is an open source multimedia framework that is already native to Fremantle since it is the library that the default mediaplayer uses and so would reduce the dependencies of my application. GStreamer makes use of pipelining, byt connecting a number of elements in an ordered fashion so that the output (source) of one element is fed into the input(sink) of another element and so on until it reaches the final element which is usually a file or a network stream.
+
+{\bf GStreamer} is an open source multimedia framework that is already native to Fremantle since it is the library that the default mediaplayer uses and so would reduce the dependencies of my application. GStreamer makes use of pipelining, byt connecting a number of elements in an ordered fashion so that the output (source) of one element is fed into the input(sink) of another element and so on until it reaches the final element which is usually a file or a network stream.
 \\\\A previous app of mine was Gstreamer based and a typical command from it would be:
-}
 \begin{verbatim}
 	      gst-launch v4l2src device=/dev/video0 ! \
 	      videoscale ! video/x-raw-yuv, width=320, height=240 ! \
 	      ffmpegcolorspace !  jpegenc 80 ! \
 	      tcpserversink host=192.168.1.101 port=9000
 \end{verbatim}
-\paragraph{This pipes the video-for-linux(version2) camera source into a video scaling element, into a raw video stream of defined height and width, into an element that convert the pixel color depths to type ffmpeg color sizes, into an element that encodes the raw stream into mjpeg format with a quality of 80\%, which then pipes it into a tcp server element which broadcasts to the specified host and port.
+This pipes the video-for-linux(version2) camera source into a video scaling element, into a raw video stream of defined height and width, into an element that convert the pixel color depths to type ffmpeg color sizes, into an element that encodes the raw stream into mjpeg format with a quality of 80\%, which then pipes it into a tcp server element which broadcasts to the specified host and port.
 \\On the recieving side, a gstreamer pipe would need to reverse the order of the elements (i.e. recieve from tcpserver, feed it into a jpeg decoder, and then specify an output window or file sink.
 \\Gstreamer is very well developed, and has a Good, Bad, and Ugly heirarchy of stable to unstable plugins that can be used to enable a wide array of different multimedia functionalities and formats.
-}
-\paragraph{Despite the speed and efficient usage of system resources, GStreamer has an extremely involved API but is difficult to work with since it is prone to cascading errors due to the every element being dependant on the previous element to function. An example of the C++ implementation of the same code as above is shown in the appendix.}
 
+Despite the speed and efficient usage of system resources, GStreamer has an extremely involved API but is difficult to work with since it is prone to cascading errors due to the every element being dependant on the previous element to function. An example of the C++ implementation of the same code as above is shown in the appendix.\\
 
-\paragraph{\bf{FCam}}
-\paragraph{FrankenCamera (or FCam) is a very easy to use open-source C++ API for controlling digital cameras.  The FCam architecture was developed as a joint reasearch project between Stanford Computer Graphics and Nokia's Research Center for controlling the N900's camera, but has since been used to run their own F2 camera built in their labs\cite{fcamdoc}. Normally camera architectures are not so easily accessible and it is very fortunate that FCam chose the N900 to develop on.
-\\The FCam API is split into 4 components:}
+FrankenCamera (or {\bf FCam}) is a very easy to use open-source C++ API for controlling digital cameras.  The FCam architecture was developed as a joint reasearch project between Stanford Computer Graphics and Nokia's Research Center for controlling the N900's camera, but has since been used to run their own F2 camera built in their labs\footcite{fcamdoc}. Normally camera architectures are not so easily accessible and it is very fortunate that FCam chose the N900 to develop on.
+\pagebreak
+\\The FCam API is split into 4 components:
 \begin{enumerate}
 \item[Device]{The camera device consists of a Lens, a Flash and other different devices. FCam has object classes for each of these with various functionlity enabled.}
 \item[Shot]{The shot object holds typical parameter settings such as exposure time, frame time, white balance, and gain for capturing and processing a single image. It is applied to the sensor object.}
@@ -128,21 +125,20 @@ Modern smartphones of today do often come equipped with camera's whose images ca
 	\vspace{-20pt}
 	\caption{FCam Architecture}
 \end{wrapfigure}
-\paragraph{It has an extermely simple API, since all the user has to do is set the shot parameters, call a new frame, and grab the image from the frame. This can be called any times in succession using the same parameters with comparitavely little lines of code.\\
+It has an extremely simple API, since all the user has to do is set the shot parameters, call a new frame, and grab the image from the frame. This can be called any times in succession using the same parameters with comparitavely little lines of code.\\
 Despite being a relatively small project, the API was extremely detailed and had many examples that I could adopt. For these reasons, FCam was the acrhitecture used for the developement of this project.
-\\
-To use it, I had to add an -lfcam dependency to the LIBS+= heading in the .pro file, and fcam-dev\_1.2.deb had to be installed to the rootstrap device.
-\\
-FCam has different image sizes depending on the colorspace of the frame that it is being extracted from. For example RAW formats only allow an aspect ratio of 4:3 (2592x1968, 1296x984, 648x492, ...160x120). However using RAW images may be better for precise image processing, but the memory it uses has a lot of overhead and for frequent repetitive use it is not very practical.}
-\paragraph{Instead the FCam::UYVY colorspace was adopted which captures the image using three components: Y, U(Cb), and V(Cr). 
+
+To use it, I had to add an -lfcam dependency to the LIBS+= heading in the .pro file, and fcam-dev\_1.2.deb had to be installed to the rootstrap device.\\
+
+FCam has different image sizes depending on the colorspace of the frame that it is being extracted from. For example RAW formats only allow an aspect ratio of 4:3 (2592x1968, 1296x984, 648x492, ...160x120). However using RAW images may be better for precise image processing, but the memory it uses has a lot of overhead and for frequent repetitive use it is not very practical.
+
+Instead the FCam::UYVY colorspace was adopted which captures the image using three components: Y, U(Cb), and V(Cr). 
 Images in this format allow subsampling to reduce the color band resolution (U and V) with a constant brightness (Y) without affecting the image quality discerniable to the human eye. This is because the human eye percieves changes in colour much less significantly than changes in brightness. UYVY format adopts the 4:2:2(Y:U:V) scaling system, where Y is sampled at every pixel and U and V are sampled at every second pixel horinzontally on each line. This greatly reduces the memory size of the image and speeds up processing with very little difference in quality.\\
-Supported UYVY image sizes are: (2592x1968, 1280x960, 800x600, 640x480, 320x240, 160x120)}
+Supported UYVY image sizes are: (2592x1968, 1280x960, 800x600, 640x480, 320x240, 160x120)
 
 \subsection{OpenCV vs CImg}
 \subsubsection{OpenCV}
-\paragraph{Now that I had my camera driver configured, I needed to choose an appropriate image library to perform the processing. Technically I could have written my own library class to perform the simple image subtraction and addition functions that I wanted, but there may have been more to offer down the line and I wanted to see what was available}
-\paragraph{OpenCV and CImg are both common imaging libraries for C, C++, and Python, for use with real-time image proccessing. 
-Both are used widely in computer vision applications, and both contain approximately the same core capabilities, though OpenCV has more extraneous features.}
+\paragraph{Now that I had my camera driver configured, I needed to choose an appropriate image library to perform the processing. Technically I could have written my own library class to perform the simple image subtraction and addition functions that I wanted, but there may have been more to offer down the line and I wanted to see what was available. OpenCV and CImg are both common imaging libraries for C, C++, and Python, for use with real-time image proccessing.  Both are used widely in computer vision applications, and both contain approximately the same core capabilities, though OpenCV has more extraneous features.}
 \paragraph{The Open Source Computer Vision Library (or OpenCV) was developed by Intel for use with computer vision applications, but since was dropped and is now maintained by Willow Garage and Itseez.
 \\OpenCV comes with many useful functions for motion detection: image subtraction, image averaging, normalising, and even its own method for tracking movement. It has an image format called IPLImage and inorder to preform operations I have to convert from FCam's relatively unknown Fcam::Image format to IPLImage. This proved difficult.
 }
@@ -162,21 +158,21 @@ The IPLImage has BGR channel order (i.e the first channel is blue, second is gre
 This took a reference to the FCam's Frame, extracted the image from it, and attempted to convert it into an unsigned 8-bit gresycale IPL image with 1 color channel. The unsigned 8-bit image would be limited to 0-255 range.\\
 Unfortunately several problems were encountered and almost three days were lost trying to get to the bottom of it:}
 \paragraph{
-A Maemo port of openCV does exist for Fremantle \cite{libcv} but despite installing libcv, libcv-dev, and many of it's dependencies (libcvcore, libhighgui) the SDK would complain about many missing dependencies when building the application. The culprit turned out to be missing dependencies for libhighgui-dev, but this was false since running a quit dpkg -L \(\langle\)dependency\_name\(\rangle\) confirmed that the dependency was indeed installed. At one stage I copied my entire /usr/lib directory from the phone to the rootstrap but it would still fail when trying to build.\\
-A few hours of trawling through the Maemo reading lists came up with a bug report \cite{highgui-dev} from the original maintainer claiming a bug within the build system.\\
+A Maemo port of openCV does exist for Fremantle \footcite{libcv} but despite installing libcv, libcv-dev, and many of it's dependencies (libcvcore, libhighgui) the SDK would complain about many missing dependencies when building the application. The culprit turned out to be missing dependencies for libhighgui-dev, but this was false since running a quit dpkg -L \(\langle\)dependency\_name\(\rangle\) confirmed that the dependency was indeed installed. At one stage I copied my entire /usr/lib directory from the phone to the rootstrap but it would still fail when trying to build.\\
+A few hours of trawling through the Maemo reading lists came up with a bug report \footcite{highgui-dev} from the original maintainer claiming a bug within the build system.\\
 For this reason OpenCV had to be abandoned and a new image processing library had to be used.
 }
 \subsubsection{CImg}
-\paragraph{CImg was suggested by my project supervisor after we discussed the bugs I had been experiencing. CImg is relateivly bug free since it does not exit in any packaged form. In fact all the functions and image processing capabilities are contained within a single 40,000 lined header file coming up to 2.54MB in size. \\Despite the jaw-dropping overhead of including this file in development process, Qt only had to parse the functions within it once and it was set to go.\\
-Another bonus is that it removes a dependency from the project, and makes it all that much more portable. One thing I had to do first was to convert from FCam to CImg.
-\\The CImg constructor is formed of: 
-CImg(const unsigned int width,
-     const unsigned int height,
-     const unsigned int size\_z=1, //depth
-     const unsigned int size\_c=1 //spectrum
-)
-And to construct a CImg, all one has to do is call CImg\(\langle\)T\(\rangle\) name; where T is the type or size of each pixel value, and name is the name of the image. So for an image that that has 256 colorspace, T = unsigned char = 8bit.
-In CIMG, the color channels are in RGB format. OpenCV's IPLImage only supports up to 4 color channels but CImg supports up to any number and this provided a source of initial confusion for me:
+\paragraph{CImg was suggested by my project supervisor after we discussed the bugs I had been experiencing. CImg is relateivly bug free since it does not exit in any packaged form. In fact all the functions and image processing capabilities are contained within a single 40,000 lined header file coming up to 2.54MB in size. \\Despite the jaw-dropping overhead of including this file in development process, Qt only had to parse the functions within it once and it was set to go.
+\\Another bonus is that it removes a dependency from the project, and makes it all that much more portable. One thing I had to do first was to convert from FCam to CImg.
+\\The CImg constructor is formed of:\\
+CImg(const unsigned int width,\\
+\tab const unsigned int height,\\
+\tab const unsigned int size\_z=1, //depth\\
+\tab const unsigned int size\_c=1 //spectrum\\
+)\\
+To construct a CImg, all one has to do is call ‘CImg\(\langle\)T\(\rangle\) Name’; where T is the type or size of each pixel value, and name is the name of the image. So for an image that that has 256 colorspace, T = unsigned char = 8bit.
+In CIMG, the color channels are in RGB format. OpenCV's IPLImage only supports up to 4 color channels but CImg supports up to any number and this provided a source of initial confusion for me.
 http://sph2grid.googlecode.com/svn-history/r14/trunk/CImg/plugins/cimg\_ipl.h:\\
 Using the same format as the cornell code I attempted to make:}
 \begin{frame}[fragile]
@@ -184,33 +180,7 @@ Using the same format as the cornell code I attempted to make:}
 \end{frame}
 \paragraph{This wasn't able to produce a consistent image (or any image at all) and I had to play around a wide variety of pixel values:}
 \begin{frame}[fragile]
-\begin{verbatim}
-//MAGENTA
-newimg1(i,j,0, 0) = pixels[0]; //red
-newimg1(i,j,0 ,1) = pixels[1]; //green
-newimg1(i,j,0, 2) = pixels[2]; //blue;
-//
-//BLACK IMAGE
-newimg2(i,j,0, 0) = pixels[0]/255; //red
-newimg2(i,j,0 ,1) = pixels[1]/255; //green
-newimg2(i,j,0, 2) = pixels[2]/255; //blue;
-//
-newimg3(i,j,0) = pixels[0]; //red
-newimg3(i,j,1) = pixels[1]; //green
-newimg3(i,j,2) = pixels[2]; //blue;
-//
-newimg4(i,j,0) = pixels[0]/255; //red
-newimg4(i,j,1) = pixels[1]/255; //green
-newimg4(i,j,2) = pixels[2]/255; //blue;
-//GREEN
-newimg5(i,j,32, 0) = pixels[0]; //red
-newimg5(i,j,32, 1) = pixels[1]; //green
-newimg5(i,j,32, 2) = pixels[2]; //blue;
-//BLACK IMAGE
-newimg6(i,j,32, 0) = pixels[0]/255; //red
-newimg6(i,j,32, 1) = pixels[1]/255; //green
-newimg6(i,j,32, 2) = pixels[2]/255; //blue
-\end{verbatim}
+\lstinputlisting[title=\textbf{Source Code: imagetest.cpp}]{../Code/convert.cpp}
 \end{frame}
 \paragraph{The idea was that by specifying the (i,j) coordinates of the new image and grabbing the pixel values from the FCam image and sticking it into (i,j) coordinates of the new CImg. I attempted to divide by 255 in some of the tests because I wasn;t sure how large the FCam::Image was, and this was my idea of normalizing it. I later realised that the pixel values were already normalized to 8-bit values and that dividing by 255 limited the CImg to \{0,1\} values would ultimately produce a black image.}
 \paragraph{By digging around through the source of the original fcam application for the N900, I was able to find a function that converted FCam by accessing the image data and reading from it:}
@@ -218,59 +188,46 @@ newimg6(i,j,32, 2) = pixels[2]/255; //blue
 \lstinputlisting[title=\textbf{Source Code: CImgConvertFcam.cpp}]{../Code/API_Examples/CImgConvertFcam.cpp}
 \end{frame}
 This resulted in images that looked like this:
-\begin{wrapfigure}{R}{0.3\textwidth}
-	\vspace{-20pt}
+\begin{wrapfigure}{R}{0.5\textwidth}
 	\begin{center}
-		\includegraphics[width=0.3\textwidth]{../images/redbuffer1}
-	\end{center}
+	\vspace{-20pt}
+		\includegraphics[width=0.5\textwidth]{../images/redbuffer1}
 	\vspace{-20pt}
 	\caption{Very red image.}
+	\end{center}
 \end{wrapfigure}
 \paragraph{
 A similar image would appear using imgBuffer[1] instead of imgBuffer[0], and I didn't understand why until I looked up CImg's documentation and realised that out of the 32 channels I was initialising, the first channel is red and that was the only channel I was writing to.
 That is, for a greyscale image from 0-255 at pixel i,j - I was sticking it into CImg\{Red,0,0,0,0....32 times.\}, and thus ending up with a red image.
 \\Once I limited CImg to 1 color channel (i.e. black and white) then I got my desired image as shown by the real and greyscale comparison below:
 }
-\begin{wrapfigure}{R}{0.3\textwidth}
+\begin{wrapfigure}{R}{0.4\textwidth}
 	\vspace{-20pt}
 	\begin{center}
-		\includegraphics[width=0.3\textwidth]{../images/realbuffer2}
+		\includegraphics[width=0.4\textwidth]{../images/realbuffer2}
 	\end{center}
 	\vspace{-20pt}
 	\caption{Image saved by FCam}
-	\vspace{10pt}
+	\vspace{0pt}
 	\begin{center}
-		\includegraphics[width=0.3\textwidth]{../images/blackbuffer3}
+		\includegraphics[width=0.4\textwidth]{../images/blackbuffer3}
 	\end{center}
-	\caption{Image saved by CImg}
 	\vspace{-20pt}
+	\caption{Image saved by CImg}
+	\vspace{-40pt}
 \end{wrapfigure}
 
 \subsection{ImageMagick vs FFMpeg vs VLC vs Mencoder}
 \paragraph{Now that the image processing side of this was underway, I needed a program that could convert a series of images into a movie format so that when the user returns to their motion detector, they can watch all the highlights in the movie file over the course of a few seconds rather than having to flit through each individual image.
 }
-\paragraph{Imagemagick is an open-source image software library for processing images. It can perform much of the same functions and CImg and OpenCV, but it was not considered as a suitabe image processing library because the development package had not been released for Maemo and compatibility was a concern. There is, however, a imagemagick package for Maemo that performs the functions from commandline and so accessing its functions would not be a problem if I was resigned to the fact that I would be calling a system process from Qt. CImg has good compatibility with Imagemagick since it's convertToJPEG command actually calls the 'convert' module of Imagemagick.\\
+\paragraph{Imagemagick is an open-source image software library for processing images. It can perform much of the same functions and CImg and OpenCV, but it was not considered as a suitabe image processing library because the development package had not been released for Maemo and compatibility was a concern. There is, however, a imagemagick package for Maemo that performs the functions from commandline and so accessing its functions would not be a problem if I was resigned to the fact that I would be calling a system process from Qt. CImg has good compatibility with Imagemagick since it's convertToJPEG command actually calls the 'convert' module of Imagemagick.}
+\paragraph{
 According to the documentation, to convert a series of jpegs to a movie format, all one has to do is call:
 'convert -delay \(\langle\)frametime\(\rangle\) input\_jpegs\_*.jpg output\_movie.mpg'\\
-But this failed with Maemo specific errors:}
-\begin{verbatim}
-Nokia-N900:/home/user/MyDocs/DCIM/MISC\# convert -delay 20 -monitor timelapse-0000*.jpg movie.mpg
-load image[timelapse-000001.jpg]: 479 of 480, 100\% complete
-load image[timelapse-000002.jpg]: 479 of 480, 100\% complete
-...
-load image[timelapse-000015.jpg]: 479 of 480, 100\% complete
-mogrify image[timelapse-000015.jpg]: 9 of 10, 100\% complete
-Composite/Image[movie.mpg]: 479 of 480, 100\% complete
-..
-Composite/Image[movie.mpg]: 479 of 480, 100\% complete
-Save/Image//var/tmp[magick-XX9TmsAd7.jpg]: 479 of 480, 100\% complete
-..
-Save/Image//var/tmp[magick-XX9TmsAd63.jpg]: 479 of 480, 100\% complete
-convert: Empty input file `timelapse-000001.jpg' @ error/jpeg.c/EmitMessage/233.
-..
-convert: Empty input file `timelapse-000010.jpg' @ error/jpeg.c/EmitMessage/233.
-Nokia-N900:/home/user/MyDocs/DCIM/MISC\# 
-\end{verbatim}
+But this failed with Maemo specific errors:\\\\}
+\begin{frame}[fragile]
+\lstinputlisting[title=\textbf{Source Code: Errors}]{../Code/errors.cpp}
+\end{frame}
 \paragraph{so I was not able to use imagemagick on the device. This is perhaps a good thing since the imagemagick suite is very large and would be a hefty dependency to add to my project
 }
 \paragraph{FFmpeg was my next and most immediate option - I have used it countless times before to convert movie files and I have found it's libavcodec library a powerful and useful tool in the past. FFMpeg is one of the most popular free multimedia frameworks around, supporting every single codec and format under the sun. It has a fast release time too and when a new format is released it is not usually a long wait before ffmpeg has a supporting library for it. FFmpeg is primarily used to stream, convert, decode, mux, demux and transcode video files into different formats, but is not used for computer vision.\\
@@ -461,13 +418,13 @@ leaves noise behind which are counted as non-zero white pixels in a normalised i
 The images above show how the running average method reduces the localised noise within certain regions, but increases the overall scatter of the noise as it accumulates around certain individual pixels as it is 'flattened' over several frames.\\
 In \cref{img:scatter1} the noise is clustered together and makes up a significant part of the static image. But in \cref{img:scatter2} the noise is much more sparsely spread and most of the noisy white-pixels are surrounded by empty neighbours.\\
 
-Clearly another technique is needed to smooth the images so that sparse pixels surrounded by emptiness can be ignored and not contribute to the threshold count. Such techniques are called \bf{morphological operations}
+Clearly another technique is needed to smooth the images so that sparse pixels surrounded by emptiness can be ignored and not contribute to the threshold count. Such techniques are called {\bf morphological operations}
 
 \subsubsection{Image Morphology}
 Another way to reduce noise in an image is to 'smooth out' random white pixels, so that an image dotted sparsely with noise is converted into an image that contains only the most concentrated of clusters.  To do this one needs to smooth the pixels.
 In binary colorspace, smoothing a pixel requires considering the values of the neighbouring pixels. If pixel A has 8 neighbours (adjacent/diagonal), then the 0 or 1 value of pixel A is determined by the value of its neighbours.\\
-To \bf{Dilate} a pixel is to set its value to 1 if all (or most) of it's neighbouts are also 1.\\
-To \bf{Erode} a pixel is to set its value to 0 if all (or most) of it's neighbours are also 0.\\
+To {\bf Dilate} a pixel is to set its value to 1 if all (or most) of it's neighbouts are also 1.\\
+To {\bf Erode} a pixel is to set its value to 0 if all (or most) of it's neighbours are also 0.\\
 A simple example is shown below:
 \begin{center}
 \begin{frame}
@@ -485,7 +442,7 @@ Original\tab	Dilate\tab	Erode\tab\\
 \end{frame}
 \end{center}
 
-To specify the level of smoothing, one needs to consider a \bf{kernel}
+To specify the level of smoothing, one needs to consider a {\bf kernel}
 \paragraph{In algebra a kernel is a linear operator which performs an operation upon a set of data. In imaging, the data is a matrix of pixels, and the operator is a much smaller matrix of predefined size that acts as a structuring element and performs basic matrix superimposition upon the pixels and it's neighbours. \\
 A kernel is therefore the size of the neighbourhood being considered when performing Erosion or Dilation operations. Generally a kernel is an nxn square matrix applied as a mask over each pixel, but it is not bound to this shape and can take any nxm best suited.
 A 2x2 kernel will consider the three surrounding neighbours of a pixel, a 3x3 kernel will consider 8 surrounding neigbours of a pixel, a 4x4 kernel will consider 15 surrounding neighbours and so on.
@@ -499,38 +456,34 @@ Diamond kernels produce softer edges on images, and Square kernels produce block
 \subsubsection{Experiments}
 \paragraph{As of version 1.1.2, CImg comes with its own dilate and erode functions, and the kernel can be specified by a simple array. A series of tests were performed:
 }
-Starting image:
-\\
-\begin{wrapfigure}{R}{0.3\textwidth}
-	\vspace{-20pt}
-	\begin{center}
+Starting image \cref{img:uneditsub1} shows the difference between two  completely different frames:
+\begin{figure}[H]
 		\includegraphics[width=0.3\textwidth]{../images/ImageOps/uneditedsub}
-		\label{img:uneditsub1}
-	\end{center}
-	\vspace{-20pt}
-	\caption{A subtraction image showing the difference between two  completely different frames. A white pixel count of 87516 is given.}
-\end{wrapfigure}
+	\caption{White pixel count of 87516.}
+	\label{img:uneditsub1}
+\end{figure}
 
 Test 1: Seeing how the white pixel count is affected by repeated Erosion/Dilation using a 2x2 mask\\
-\begin{wrapfigure}{R}{0.3\textwidth}
-	\vspace{-20pt}
+\begin{wrapfigure}{R}{0.8\textwidth}
+	\vspace{-100pt}
 	\begin{center}
-		\includegraphics[width=0.3\textwidth]{../images/ImageOps/test1}
-		\label{img:erode1}
+		\includegraphics[width=0.8\textwidth]{../images/ImageOps/test1}
 	\end{center}
 	\vspace{-20pt}
 	\caption{Erosion, Dilation, Erosion followed by Dilation, and Dilation followed by Erosion all repeated k times}
+	\label{img:erode1}
+	\vspace{20pt}
 \end{wrapfigure}
 See the appendix for the code used.
 
-As we can see from figure \cref{img:erode1} -- repeated uses of Erosion/Dilation (or vice versa) does not affect the white pixel count for repeated usage as they do independently.
+As we can see from \cref{img:erode1} -- repeated uses of Erosion/Dilation (or vice versa) does not affect the white pixel count for repeated usage as they do independently.
 \\It is interesting to note that EroDil produces a more solid image (i.e. black parts dont have white spots within) than DilEro. This is most likely because the sparse pixels have been filtered out first, and then accentuated. If it were the other way then the sparse pixels would have been accentuated first by the dilation, and then persisted under the erosion.
 \\One thing to note is that not much has been clustered. It seemed like the 2x2 mask was too small and so I repeated the experiment with increasing mask sizes
 \\ Test 2: Seeing how white pixel count varied with repeated Erosion/Dilation using an increasing mask size from 2 to 6, using the same starting image.
-\begin{wrapfigure}{R}{0.3\textwidth}
+\begin{wrapfigure}{R}{0.5\textwidth}
 	\vspace{-20pt}
 	\begin{center}
-		\includegraphics[width=0.3\textwidth]{../images/ImageOps/test2}
+		\includegraphics[width=0.5\textwidth]{../images/ImageOps/test2}
 		\label{img:erode2}
 	\end{center}
 	\vspace{-20pt}
@@ -538,10 +491,10 @@ As we can see from figure \cref{img:erode1} -- repeated uses of Erosion/Dilation
 \end{wrapfigure}
 As expected the white pixel count increased in the EroDil and DilEro techniques with increasing square masks, however EroDil seemed to give the best quality bunching out of all the technique. Dilate by itself seemed pretty effective too, but this alone would not remove noise effectively. Dilero had to be dropped as useful image processing method since it seemed to be removing significant parts of the image and not retaining the overall blobby structure.
 \\Test 3: Seeing how white pixel count varies with repeated seperate calls to Erosion and Dilation
-\begin{wrapfigure}{R}{0.3\textwidth}
+\begin{wrapfigure}{R}{0.5\textwidth}
 	\vspace{-20pt}
 	\begin{center}
-		\includegraphics[width=0.3\textwidth]{../images/ImageOps/test2A}
+		\includegraphics[width=0.5\textwidth]{../images/ImageOps/test2A}
 		\label{img:erode3}
 	\end{center}
 	\vspace{-20pt}
@@ -707,12 +660,12 @@ This resulted in yet another flurry of badly aligned images as shown in \cref{im
 	\caption{Usable images are where ‘div’ amount equals 2 and format is 0, 1, or 11}
 	\label{fig:shell2}
 \end{figure}
-Out of all the images in \cref{img:shell2} , only three were actually usable - all ocurring where the image dimensions were halved. This put to rest my earlier unfounded suspicions that image size was affect by the image color format. The usable image formats were QImage::Format_ARGB32, QImage::Format_ARGB32_Premultiplied, and QImage::Format_RGB32.  Once again, the color was slightly off again, appearing more magenta than it actually was.
+Out of all the images in \cref{img:shell2} , only three were actually usable - all ocurring where the image dimensions were halved. This put to rest my earlier unfounded suspicions that image size was affect by the image color format. The usable image formats were QImage::Format\_ARGB32, QImage::Format\_ARGB32\_Premultiplied, and QImage::Format\_RGB32.  Once again, the color was slightly off again, appearing more magenta than it actually was.
 
 Wondering if the problem was to do with RGB channels being in different order for QImage’s (the idea came to me after remembering that OpenCV’s IPLImage format was by default BGR), I swapped the blue and red channels using QImage’s swapRGB() function. To my surprise this produced very little difference in the outputted images as shown in \cref{fig:swaprgb}
 \begin{figure}
 	\begin{center}
-		\includegraphics[width=0.7\textwidth]{../images/qpix/rgbswap}
+		\includegraphics[width=0.7\textwidth]{../images/qpix/swaprgb}
 	\end{center}
 	\vspace{-20pt}
 	\caption{}
@@ -752,13 +705,8 @@ Early on in the development of the app, I came across problems where the FCam dr
 
 For this reason I enabled a kernel check at the start of the Camera thread which would issue out a warning whenever a kernel different from the PR-1.3 kernel was being used. This was a simple shell call to ‘uname -r’. However the root of the problem turned out to be that I was not initializing the camera properly when I started the thread, and so when I fixed this problem, the kernelCheck function became redundant and I deleted it from the source.
 
-
-
-
-
-
-
-
+\footbibliographystyle{plain}
+\footbibliography{citers}
 
 
 
